--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -19,8 +19,8 @@ autopages:
 				<div class="blog-post__wrap">
 
 					{% if post.featured_image %}
-					<a href="{{ post.url }}" class="blog-post__image" style="background-image: url('{{ post.featured_image  }}');">
-						<img src="{{ post.featured_image }}" alt="{{ post.title }}" class="blog-post__image__img">
+					<a href="{{ post.url }}" class="blog-post__image" style="background-image: url('{{ site.baseurl }}{{ post.featured_image  }}');">
+						<img src="{{ site.baseurl }}{{ post.featured_image }}" alt="{{ post.title }}" class="blog-post__image__img">
 					</a>
 					{% endif %}
 
