--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,9 @@ header, footer, section {
 	clear: both;
 	width: 100%;
 }
+.logo {
+	width: 100px;
+  }
 
 
 // - - - - - - - - - - - - - - - - - -
